--- a/index.html
+++ b/index.html
@@ -1,31 +1,77 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>A-Frame Sandbox</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <meta charset="utf-8" />
+    <title>A-Frame Snowman</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.4.2/dist/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-particle-system-component@4.0.6/dist/aframe-particle-system-component.min.js"></script>
+    <style>
+      body { margin: 0; font-family: sans-serif; }
+      .info { position: absolute; left: 12px; top: 12px; color: #222; background: rgba(255,255,255,0.8); padding: 6px 10px; border-radius: 4px; }
+    </style>
   </head>
+
   <body>
-    <h1>A-Frame Sandbox</h1>
-    <p>Some webVR &amp; webAR experiments in A-frame <b>by Sawyer</b>. A-frame sandbox and all its corresponding code was created for the ATLAS Institute's Creative Technology and Design &#40;CTD&#41; Course: <i>Image</i> by Sheiva Rezvani and Jordyn Rabinowitz based on code originally shared on Glitch through <a href="https://aframe.io/aframe-school/#/" target="_blank">the A-frame School</a>. Other resources: <a href="https://aframe.io/">A-frame documentation and examples</a>. The original CTD Image course&#39;s Sandbox code repository with more instructions on <a href="https://github.com/sheiva/aframe-example-code">Github</a> </p>
-    
-    <h2>Starter Code from the A-frame School</h2>
-    <ul>
-      <li><a href="01-hello-AFrame-world-primitive-positions/index.html">Hello A-Frame World - Playing with Primitive Positions</a></li>
-      <li><a href="02-Adding-textures-to-sky-and-primitives/index.html">Hello A-Frame World - Textures</a></li>
-      <li><a href="03-Adding-3D-objects-lights-text/index.html">A-Frame &#43; A-Frame adding 3D Objects and Lights</a></li>
-      <li><a href="04-ARjs-example01-attach-a-whole-scene-to-a-marker/index.html">A-Frame &#43; AR - Attach a marker to a scene</a></li>
-      <li><a href="05-ARjs-example02-individualmarkers/index.html">A-Frame &#43; AR - Attach objects to individual markers</a></li>
-    </ul>
+    <div class="info">Use mouse / touch to look around. Move with WASD or joystick.</div>
 
-    <h2>Image Lab Starter Code</h2>
-    <ul>
-      <li><a href="ImageLab09/index.html">Image Lab &#35;09</a></li>
-      <li><a href="ImageLab10/index.html">Image Lab &#35;10</a></li>
-      <li><a href="ImageLab11/index.html">Image Lab &#35;11</a></li>
-      <li><a href="ImageProject-03/index.html">Project 03</a></li>
-    </ul>
+    <a-scene background="color: #87ceeb">
+      <!-- Lights -->
+      <a-entity light="type: ambient; color: #888"></a-entity>
+      <a-entity light="type: directional; color: #fff; intensity: 0.9" position="1 2 1"></a-entity>
 
-    
+      <!-- Camera -->
+      <a-entity id="cameraRig">
+        <a-entity camera look-controls position="0 1.6 6"></a-entity>
+      </a-entity>
+
+      <!-- Ground -->
+      <a-plane rotation="-90 0 0" width="40" height="40" color="#eef6ff" position="0 0 0"></a-plane>
+
+      <!-- Snow particle system -->
+      <a-entity particle-system="particleCount: 9000; color: #FFF; size: 0.04; maxAge: 6; positionSpread: 20 10 20; velocityValue: 0 -0.6 0;"></a-entity>
+
+      <!-- Snowman group -->
+      <a-entity id="snowman" position="0 0 0">
+        <!-- Bottom sphere -->
+        <a-sphere radius="1" color="#fff" position="0 1 0" segments-width="32" segments-height="16"></a-sphere>
+
+        <!-- Middle sphere -->
+        <a-sphere radius="0.7" color="#fff" position="0 2.3 0" segments-width="32" segments-height="16"></a-sphere>
+
+        <!-- Head -->
+        <a-sphere radius="0.45" color="#fff" position="0 3.05 0" segments-width="32" segments-height="16"></a-sphere>
+
+        <!-- Eyes -->
+        <a-sphere radius="0.05" color="#000" position="-0.12 3.15 0.41"></a-sphere>
+        <a-sphere radius="0.05" color="#000" position="0.12 3.15 0.41"></a-sphere>
+
+        <!-- Nose (carrot) -->
+        <a-cone radius-bottom="0.06" radius-top="0" height="0.45" color="#ff8c00" position="0 3.05 0.52" rotation="90 0 0"></a-cone>
+
+        <!-- Mouth (small coal pieces) -->
+        <a-sphere radius="0.04" color="#000" position="-0.18 2.95 0.38"></a-sphere>
+        <a-sphere radius="0.04" color="#000" position="-0.06 2.92 0.4"></a-sphere>
+        <a-sphere radius="0.04" color="#000" position="0.06 2.92 0.4"></a-sphere>
+        <a-sphere radius="0.04" color="#000" position="0.18 2.95 0.38"></a-sphere>
+
+        <!-- Buttons on chest -->
+        <a-sphere radius="0.06" color="#000" position="0 2.3 0.7"></a-sphere>
+        <a-sphere radius="0.06" color="#000" position="0 1.9 0.78"></a-sphere>
+        <a-sphere radius="0.06" color="#000" position="0 1.5 0.7"></a-sphere>
+
+        <!-- Arms (twigs) -->
+        <a-cylinder radius="0.03" height="1.2" color="#5b3a29" position="-0.95 2.3 0" rotation="0 0 45"></a-cylinder>
+        <a-cylinder radius="0.03" height="1.2" color="#5b3a29" position="0.95 2.3 0" rotation="0 0 -45"></a-cylinder>
+
+        <!-- Hat -->
+        <a-cylinder radius="0.28" height="0.08" color="#111" position="0 3.5 0"></a-cylinder>
+        <a-cylinder radius="0.18" height="0.5" color="#111" position="0 3.78 0"></a-cylinder>
+      </a-entity>
+
+      <!-- Small ambient objects for scale -->
+      <a-box position="-3 0.5 -2" depth="0.5" height="1" width="0.5" color="#cce6ff"></a-box>
+      <a-box position="3 0.5 -2" depth="0.5" height="1" width="0.5" color="#cce6ff"></a-box>
+    </a-scene>
   </body>
 </html>
